# env-auditor

./: .env-auditorrc  .envcheckrc  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/env_auditor/: __init__.py  __main__.py  cli.py  config.py  parser.py  patterns.py  reporter.py  scanner.py
src/envcheck/: __init__.py  __main__.py  cli.py  colors.py  config.py  differ.py  parser.py  reporter.py  scanner.py
tests/: test_cli.py  test_colors.py  test_config.py  test_differ.py  test_parser.py  test_scanner.py
tests/fixtures/env_files/: comprehensive.env  windows.env
tests/fixtures/sample_project/: .env.example
tests/fixtures/sample_project/src/: cache.py
tests/fixtures/sample_project/src/config/: app.js
tests/fixtures/sample_project/src/db/: connection.py
tests/fixtures/sample_project/src/payments/: webhook.py
